# doter

./: .gitignore  app.py  build_requirements.txt  cli.py  config.yaml  config.yml  doter.py  justfile  nvim_init.vim  pyproject.toml  requirements.txt  rich_lib.py  run.py  setup.py  spacevim.toml  tmux.conf.local  typings.py  vimrc  zshrc
.github/workflows/: build.yml  test.yml
doter/: __main__.py  app.py  cli.py  doter.py  dotfile.py  eventbus.py  events.py  exceptions.py  lib.py  reporter.py  tpying.py  ui.py  utils.py
doter/commands/: __init__.py  backup.py  clean.py  command.py  install.py  link.py
doter/config/: __init__.py
doter/parser/: __init__.py
doter/test/: test.yml  test_app.py  test_eventbus.py
doter/ui/: __init__.py  cleanup_ui.py  install_ui.py
dotfiles/: install_starship.sh  nvim_init.vim  spacevim.toml  tmux.conf.local  vimrc  zshrc
dotfiles/vim_conf/: indent.vim  shell.vim
dotfiles/vimrc.d/: indent.vim  shell.vim
test/: common.py  conftest.py  test.yml  test_app.py  test_clean.py  test_eventbus.py  test_install.py  test_link.py
