[tool.poetry]
name = "doter"
version = "1.0.1"
description = "A dotfile manager"
authors = ["Alex Zhang <zhangchi0104@live.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"
fire = "^0.4.0"
rich = "^10.15.2"

[tool.poetry.dev-dependencies]
pytest-asyncio = "^0.16.0"
pytest = "6.2.5"
toml = "^0.10.2"
yapf = "^0.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
doter = "doter.__main__:main"
